--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="inline.51b7e7ccd4d33bcdbd04.bundle.js"></script>
     <script type="text/javascript" src="polyfills.f20484b2fa4642e0dca8.bundle.js"></script>
     <script type="text/javascript" src="main.7d735bdcd19632a15927.bundle.js"></script>
+    <script type="text/javascript" src="./sw.js"></script>
 </body>
 
 </html>
