--- a/shame.html
+++ b/shame.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <link href="shame.css" rel="stylesheet" />
     <?xml version="1.0" encoding="UTF-8"?>
     <svg class="page404" viewBox="0 0 5059 4833" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
